# FACADE-API-Flights

./: README.md  main.py  pyproject.toml
app/facade/: booking_facade.py  car_rental_service.py  flight_service.py  hotel_service.py
app/routes/: search_flights.py
app/schemas/: car_rental.py  flight.py  hotel.py  search_response.py
app/utils/: date_parser.py
docs/: FacadeUMLs.drawio  UML Diagram.drawio
docs/archivos-ejemplos/: 1-WithoutFacade.java  2-UsingFacade.java  3-FacadeScalable.java  4-FacadeAditional.java
